[bug] Fixed video z-index

--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -255,24 +255,16 @@
 	    }
 
 		#videochat{
-	    	position: absolute;
-	    	left: 0px;
-				top: 0px;
-	    	width: 29%;
-	    	height: 40%;
-	    	/* height: 100vh; */
-	    	display: none;
-	    	-webkit-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
-				-moz-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
-				box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
-				/*margin-left: 10px;*/
-	    	/*
-			background-color: #444444;
-  			background-image: -webkit-linear-gradient(top, #444444, #999999);
-			background-image: linear-gradient(to bottom, #444444, #999999);
-			*/
-			/*border-color: lightblue;*/
-			/*border-radius: 25px;*/
+    	position: absolute;
+    	z-index: 2;
+    	left: 0px;
+			top: 0px;
+    	width: 29%;
+    	height: 40%;
+    	display: none;
+    	-webkit-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
+			-moz-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
+			box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
 			opacity: 0.93;
 			font-size: 40px;
 			font-weight: bold;
